examples/datalog/11_types/19_null_handling.dl
% Test: NULL/missing value handling
% Expected: NULL values handled consistently
% Category: 11_types
% Priority: P1 - Type handling

.kg create test_null
.kg use test_null

% Division by zero produces NULL
+nums[(10,), (20,), (0,)].

div_result(X, Y) :- nums(X), Y = 100 / X.

?- div_result(X, Y).

% Filter on non-null result
non_null(X, Y) :- div_result(X, Y), Y != 0.

?- non_null(X, Y).

.kg use default
.kg drop test_null
